# easy-scaffold-copier

./: config.py.jinja  cookiecutter.json  copier.yaml
app/: __init__.py
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter._project_name}}/: config.py  pyproject.toml
{{cookiecutter._project_name}}/app/: __init__.py  urls.py
{{cookiecutter._project_name}}/migrations/: env.py
{{cookiecutter.project_name}}/: config.py  pyproject.toml
{{project_name}}/: config.py.jinja
