[tool.poetry]
name = "{{cookiecutter._project_name}}"
version = "0.1.0"
description = ""

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
Flask-Easy = "^0.0.1

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"